--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     #关闭spring的启动日志
   main:
     banner-mode: off
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: 100ms
 
 #mybatisplus的日志功能（sql打印）调试用
 mybatis-plus:
