--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,21 @@ server:
   port: 8080
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/exam_1449?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
-    username: root
-    password: leiming520
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    #type: com.alibaba.druid.pool.DruidDataSource
+    #url: jdbc:mysql://localhost:3306/exam_1449?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
+    #username: root
+    #password: leiming520
+    #driver-class-name: com.mysql.cj.jdbc.Driver
     #关闭spring的启动日志
+    url: jdbc:oracle:thin:@172.19.103.133:1521:orcl
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    username: rhap
+    password: rhap
   main:
     banner-mode: off
     redis:
@@ -20,6 +28,19 @@ spring:
           max-idle: 8
           min-idle: 0
           max-wait: 100ms
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+    listener:
+      simple:
+        acknowledge-mode: manual #手动确认   其他属性auto：自动确认
+        prefetch: 1 #每次确认一条消息
+        retry:
+          enabled: true #当消费失败时，允许消息重试
+          initial-interval: 3000 #重试的时间是3秒
+          max-attempts: 3 #设置最大重试的次数 3次后，消息进入死信队列（需要设置死信交换机）
 
 #mybatisplus的日志功能（sql打印）调试用
 mybatis-plus:
